// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateReferralLetterPdfBuffer sender is 'sender address' generates letter pdf html correctly 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/src/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      Recipient Title and Name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                OFFICE OF THE POLICE MONITOR<br />
                966 Morningview Lane | Grenville, WI | 53540 <br />
                Phone (641) 892-7222| Fax (414) 335-3049
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      JOHN A SIMMS
      <br>
      POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    Recipient Title and Name</br>
    Recipient Address
    <p><br></p>
    <p><strong>RE: Complaint Referral; PM Complaint CC-2011-0099</strong></p>
    <p><br></p>
    <p>Dear Recipient Title and Name:</p>
    <p><br></p>
    <p> Letter Body </p>
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    Sender Address<br> Sender Address Second Line
    <p><br></p>
    Transcribed by: Transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' pdf create gets called with expected letter html when letter is edited 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/src/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                OFFICE OF THE POLICE MONITOR<br />
                966 Morningview Lane | Grenville, WI | 53540 <br />
                Phone (641) 892-7222| Fax (414) 335-3049
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      JOHN A SIMMS
      <br>
      POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; PM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    Custom Letter HTML
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' pdf create gets called with expected letter html when letter is generated 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/src/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                OFFICE OF THE POLICE MONITOR<br />
                966 Morningview Lane | Grenville, WI | 53540 <br />
                Phone (641) 892-7222| Fax (414) 335-3049
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      JOHN A SIMMS
      <br>
      POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; PM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' should update case reference prefix to AC when primary complainant is anonymized 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/src/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                OFFICE OF THE POLICE MONITOR<br />
                966 Morningview Lane | Grenville, WI | 53540 <br />
                Phone (641) 892-7222| Fax (414) 335-3049
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      JOHN A SIMMS
      <br>
      POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; PM Complaint AC2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is 'sender address' signature is not included when sender is not official sender even if includeSignature is true 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/src/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                OFFICE OF THE POLICE MONITOR<br />
                966 Morningview Lane | Grenville, WI | 53540 <br />
                Phone (641) 892-7222| Fax (414) 335-3049
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      JOHN A SIMMS
      <br>
      POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; PM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    Custom Letter HTML
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    sender address
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is official sender signature is included when sender is official sender and includeSignature is true 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/src/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                OFFICE OF THE POLICE MONITOR<br />
                966 Morningview Lane | Grenville, WI | 53540 <br />
                Phone (641) 892-7222| Fax (414) 335-3049
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      JOHN A SIMMS
      <br>
      POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; PM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <img style=\\"max-height: 55px\\" src=file:/app/src/instance-files/images/john_a_simms.png />
    <p><br></p>
    John A Simms
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;

exports[`generateReferralLetterPdfBuffer sender is official sender signature is not included when includeSignature is false 1`] = `
"<html>
  <head>
      <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"pdf.css\\">
  </head>
  <body>
    <div id=\\"pageHeader-first\\">
      <div style=\\"text-align: center;\\">
        <img style=\\"max-width: 223px\\" src=\\"file:/app/src/instance-files/images/header_text.png\\" />
      </div>
      <div style=\\"text-align: center; margin-top: 8px\\">
        <img style=\\"max-width: 42px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
      </div>
    </div>
    <div id=\\"pageHeader\\" style=\\"font-size:8.5pt; color: #7F7F7F;\\">
      recipient title and name<br/>
      July 01, 2018<br/>
      Page {{page}}
    </div>

    <div id=\\"pageFooter\\" style=\\"text-align: center; margin-top: 16px\\">
            <span  style=\\"display:inline-block; margin: 6px 16px 0 0\\">
                <img style=\\"max-width: 30px\\" src=\\"file:/app/src/instance-files/images/icon.ico\\" />
            </span>
      <span style=\\"display:inline-block; font-size:7pt; color: #7F7F7F;\\">
                OFFICE OF THE POLICE MONITOR<br />
                966 Morningview Lane | Grenville, WI | 53540 <br />
                Phone (641) 892-7222| Fax (414) 335-3049
            </span>
      <span  style=\\"display:inline-block; width: 46px\\">&nbsp;</span>
    </div>
    <p style=\\"color: #7F7F7F;\\">
      JOHN A SIMMS
      <br>
      POLICE MONITOR
    </p>
    <p><br></p>
    July 01, 2018
    <p><br></p>
    recipient title and name</br>
    recipient address
    <p><br></p>
    <p><strong>RE: Complaint Referral; PM Complaint PO2017-0001</strong></p>
    <p><br></p>
    <p>Dear recipient title and name:</p>
    <p><br></p>
    
    <p><br></p>
    Sincerely,
    <p><br></p>
    <p><br></p>
    <p><br></p>
    John A Simms
    <p><br></p>
    Transcribed by: transcriber
  </body>
</html>"
`;
